[package]
name = "circ"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Efficient referenced counted pointers for non-blocking concurrency"
readme = "README.md"
homepage = "https://github.com/kaist-cp/circ"
repository = "https://github.com/kaist-cp/circ"
keywords = ["atomic", "reference-counting", "non-blocking", "lock-free"]
categories = ["concurrency", "memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"
scopeguard = "1.1.0"
static_assertions = "1.1.0"
atomic = "0.5"
cfg-if = "1.0"
rustc-hash = "1.1.0"
memoffset = "0.7"

[dev-dependencies]
rand = "0.8"
bitflags = "2.4.0"
